@@ -56,7 +56,6 @@ enum _GnomeVFSResult {
 	GNOME_VFS_ERROR_INTERRUPTED,
 	GNOME_VFS_ERROR_FILEEXISTS,
 	GNOME_VFS_ERROR_LOOP,
-	GNOME_VFS_ERROR_BAD_POINTER,
 	GNOME_VFS_NUM_ERRORS
 };
 typedef enum _GnomeVFSResult GnomeVFSResult;
