@@ -264,8 +264,7 @@ do_close (GnomeVFSMethodHandle *method_handle)
 	FileHandle *file_handle;
 	gint close_retval;
 
-	g_return_val_if_fail (method_handle != NULL,
-			      GNOME_VFS_ERROR_BAD_POINTER);
+	g_return_val_if_fail (method_handle != NULL, GNOME_VFS_ERROR_INTERNAL);
 
 	file_handle = (FileHandle *) method_handle;
 
@@ -291,8 +290,7 @@ do_read (GnomeVFSMethodHandle *method_handle,
 	FileHandle *file_handle;
 	gint read_val;
 
-	g_return_val_if_fail (method_handle != NULL,
-			      GNOME_VFS_ERROR_BAD_POINTER);
+	g_return_val_if_fail (method_handle != NULL, GNOME_VFS_ERROR_INTERNAL);
 
 	file_handle = (FileHandle *) method_handle;
 
@@ -318,8 +316,7 @@ do_write (GnomeVFSMethodHandle *method_handle,
 	FileHandle *file_handle;
 	gint write_val;
 
-	g_return_val_if_fail (method_handle != NULL,
-			      GNOME_VFS_ERROR_BAD_POINTER);
+	g_return_val_if_fail (method_handle != NULL, GNOME_VFS_ERROR_INTERNAL);
 
 	file_handle = (FileHandle *) method_handle;
 
@@ -403,8 +400,7 @@ do_truncate (GnomeVFSMethodHandle *method_handle,
 {
 	FileHandle *file_handle;
 
-	g_return_val_if_fail (method_handle != NULL,
-			      GNOME_VFS_ERROR_BAD_POINTER);
+	g_return_val_if_fail (method_handle != NULL, GNOME_VFS_ERROR_INTERNAL);
 
 	file_handle = (FileHandle *) method_handle;
 
